force-app/main/default/objects/Similar_Case_Prediction__c/Similar_Case_Prediction__c.object-meta.xml
<CustomObject>
    <label>Similar Case Prediction</label>
    <nameField>
        <displayFormat>PRED-{0000}</displayFormat>
        <label>Prediction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Similar Case Predictions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>