force-app/main/default/objects/Similar_Case_Prediction__c/fields/Case_Link__c.field-meta.xml
<CustomField>
    <fullName>Case_Link__c</fullName>
    <label>Case Link</label>
    <type>Url</type>
</CustomField>