force-app/main/default/objects/Similar_Case_Prediction__c/fields/Similar_Case__c.field-meta.xml
<CustomField>
    <fullName>Similar_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Similar Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Similar Case Predictions (Similar)</relationshipLabel>
    <relationshipName>Similar_Case_Predictions_Similar</relationshipName>
    <type>Lookup</type>
</CustomField>