force-app/main/default/objects/Similar_Case_Prediction__c/fields/Source_Case__c.field-meta.xml
<CustomField>
    <fullName>Source_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Similar Case Predictions (Source)</relationshipLabel>
    <relationshipName>Similar_Case_Predictions_Source</relationshipName>
    <type>Lookup</type>
</CustomField>